--- a/chat.html
+++ b/chat.html
@@ -338,7 +338,7 @@
                 width:    100%;
             }
         </style>
-<iframe src="http://aaditv.free.nf/aaditv.app/SonyLiv/index.html" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
+<iframe src="https://adityatv.github.io/ipllive/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
 </div>
 
 
