--- a/index.html
+++ b/index.html
@@ -1,4 +1,35 @@
+<img class="splash-logo" src="https://raw.githubusercontent.com/Adityatv/ipllive/refs/heads/main/20250619_191919.gif" alt="logo">
+<style>.app-loaded {
+  display: none;
+  padding: 1rem;
+  font-size: 1.5rem;
+}
 
+/* Would ideally be added in the "style" section in <head> so that it loads when the page loads immediately */
+.splash-logo {
+  position: absolute;
+  left: 48%;
+  top: 48%;
+  width: 7rem;
+  height: auto;
+}
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+</style>
+<script>function loadApp() {
+  document.querySelector(".splash-logo").style.display = "none";
+  document.querySelector(".app-loaded").style.display = "block";
+}
+
+setTimeout(loadApp, 5000);</script>
 <!DOCTYPE html>
 
 
