--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
    .cover {
      background: #FFFFFF;
      position: fixed;
-     width: 100%;
-     height: 100%;
+     width: auto;
+     height: auto;
      opacity: 0;
      animation: fade-out 8s;
    }
