--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
    margin: 0;
  }
  .cover img {
-   width: 500px;
-   height: 500px;
+   width: auto;
+   height:auto;
    margin-top: 1%;
    margin-left: 1%;
  }
    .cover {
      background: #FFFFFF;
      position: fixed;
-     width: auto;
-     height: auto;
+     width: 100%;
+     height: 100%;
      opacity: 0;
      animation: fade-out 8s;
    }
