--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-	
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
+<html><head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="" content="">
   </head>
   <body>
@@ -15,17 +13,18 @@
  }
  .cover img {
    width: auto;
-   height:auto;
+   height: auto;
    margin-top: 1%;
    margin-left: 1%;
+     
  }
    .cover {
      background: #FFFFFF;
      position: fixed;
-     width: 100%;
-     height: 100%;
+     width: auto;
+     height: auto;
      opacity: 0;
-     animation: fade-out 5s;
+     animation: fade-out 8s;
    }
    .cover #icon {
      --size: 100px;
@@ -63,12 +62,12 @@
  
 
 <div class="cover">
-<img src="https://i.postimg.cc/Z58MtFQD/20250619-191919.gif" width="100%" height="100%" frameborder="0">
+<img src="https://i.postimg.cc/Z58MtFQD/20250619-191919.gif" width="auto" height="auto" frameborder="0">
 </div>
 
     
-  </body>
-</html>
+  
+</body></html>
 <!DOCTYPE html>
 
 
