--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html><head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="" content="">
@@ -12,8 +11,8 @@
    margin: 0;
  }
  .cover img {
-   width: auto;
-   height: auto;
+   width: 600;
+   height: 500;
    margin-top: 1%;
    margin-left: 1%;
      
@@ -21,8 +20,8 @@
    .cover {
      background: #FFFFFF;
      position: fixed;
-     width: auto;
-     height: auto;
+     width: 100;
+     height: 500;
      opacity: 0;
      animation: fade-out 8s;
    }
